Connected filter component to the store

--- a/web/src/app/components/filter/filter.component.html
+++ b/web/src/app/components/filter/filter.component.html
@@ -1,11 +1,17 @@
 <div class='filter-component-wrapper'>
     <mat-form-field>
-        <input matInput [matDatepicker]="startDatepicker" placeholder="Select start date">
+        <input matInput
+               [matDatepicker]="startDatepicker"
+               placeholder="Select start date"
+               (change)="setStartDate">
         <mat-datepicker-toggle matSuffix [for]="startDatepicker"></mat-datepicker-toggle>
         <mat-datepicker #startDatepicker></mat-datepicker>
     </mat-form-field>
     <mat-form-field>
-        <input matInput [matDatepicker]="endDatepicker" placeholder="Select end date">
+        <input matInput
+               [matDatepicker]="endDatepicker"
+               placeholder="Select end date"
+               (change)="setEndDate">
         <mat-datepicker-toggle matSuffix [for]="endDatepicker"></mat-datepicker-toggle>
         <mat-datepicker #endDatepicker></mat-datepicker>
     </mat-form-field>
